--- a/pages/home.css
+++ b/pages/home.css
@@ -1,1 +1,25 @@
 @import 'nav.css';
+
+.hero-section{
+    width: 100%;
+    height: calc(100vh-120px);
+    background-image: url('../images/food1.jpeg');
+    background-size:cover;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+.hero-section .logo{
+    height: 150px;
+    display: block;
+    margin: auto;
+}
+
+.hero-section .sub-heading{
+    margin-top: 10px;
+    text-align: center;
+    color: black;
+    text-transform: capitalize;
+    font-size: 35px;
+    font-weight: 300;
+}
