--- a/pages/nav.css
+++ b/pages/nav.css
@@ -1,47 +1,54 @@
+/* here i have described the margine and the padding to both be zero so as to remove the automatic styling of the page .*/
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'roboto', sans-serif;
 }
-
+/*here am describing the whole navbar , the structure how it should look its colour and page only nothing more*/
 .navbar{
+
     position: sticky;
     top: 0;
     left: 0;
     width: 100%;
-    background:black;
+    background:whitesmoke;
     z-index: 9;
 }
-
+/*here am describing the nav that contains the log alone */
 .nav{
     padding: 10px;
     display: flex;
+    justify-content: space-between;
+    align-items: center;
 
 }
-
+/*i am trying to describe how my logo should look like its heightz*/
 .brand-logo{
-    height: 5px;
+    height: 20px;
     width: 100px;
 }
+/* here am describing */
 
 .nav-items{
     display: flex;
     align-items: center;
+    justify-content: space-between;
+    text-align: center;
 }
 
 .search{
-    width: 100px;
+    width: 700px;
     display: flex;
 }
 
 .search-box{
     width: 80%;
     height: 40px;
-    padding: 10px;
+    padding: 10px 20px;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
-    border: 1px solid #d1d1d1;
+    border: 1px solid #41ddd0;
     text-transform: capitalize;
     background: none;
     color: wheat;
@@ -49,7 +56,7 @@
 }
 
 .search-btn{
-    width: 20%;
+    width: 10%;
     height: 40px;
     padding: 10px 20px;
     border: none;
@@ -95,4 +102,29 @@
 
 .link:hover{
     opacity: 1;
+}
+/*styling the header section*/
+.hero-section{
+    width: 100%;
+    height: calc(100vh - 120px);
+    background-image: url('../img/header.png');
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hero-section .logo{
+    height: 150px; 
+    display: block;
+    margin: auto;
+}
+
+.hero-section .sub-heading{
+    margin-top: 10px;
+    text-align: center;
+    color: #fff;
+    text-transform: capitalize;
+    font-size: 35px;
+    font-weight: 300;
 }
