--- a/pages/home.css
+++ b/pages/home.css
@@ -23,3 +23,14 @@
     font-size: 35px;
     font-weight: 300;
 }
+. product{
+    position:relative;
+    overflow: hidden;
+    padding: 20px 0;
+}
+.product-category{
+    padding: 0 10vw;
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 40px;
+}
