--- a/pages/home.css
+++ b/pages/home.css
@@ -3,7 +3,7 @@
 .hero-section{
     width: 100%;
     height: calc(100vh-120px);
-    background-image: url('../images/food1.jpeg');
+    background-image: url('../images/food2.jpg');
     background-size:cover;
     display:flex;
     justify-content: center;
@@ -23,7 +23,7 @@
     font-size: 35px;
     font-weight: 300;
 }
-. product{
+.product{
     position:relative;
     overflow: hidden;
     padding: 20px 0;
@@ -33,4 +33,34 @@
     font-size: 30px;
     font-weight: 500;
     margin-bottom: 40px;
+    text-transform: capitalize;
+
+}
+.product-container{
+    padding: 0 10vw;
+    display: flex;
+    overflow-x:auto ;
+    scroll-behavior: smooth;
+}
+.product-container::-webkit-scrollbar{
+    display: none;
+}
+
+.product-card{
+    flex :0 0 auto;
+    width: 250px;
+    height: 450px;
+    margin-right: 40px;
+}
+
+.product-image{
+    position:relative;
+    width: 200%;
+    height: 350px;
+    overflow: hidden;
+}
+
+.product-thumb{
+    width: 100%;
+    height:100%;
 }
