adding comments on css

--- a/pages/nav.css
+++ b/pages/nav.css
@@ -89,7 +89,7 @@
     list-style: none;
     border-top: 1px solid #d1d1d1;
 }
-
+/*here am styling the link */
 .link{
     text-transform: capitalize;
     padding: 0 10px;
