adding description pages

--- a/pages/home.css
+++ b/pages/home.css
@@ -93,7 +93,25 @@
     cursor: pointer;
     opacity: 0;
 }
+/*Haha am stile some code from a tutorial to create a button description so that i can understand what am doing*/
+button {
+    padding: 7px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
 
+button.blue {
+    background-color: #3498db;
+}
+
+button.green {
+    background-color: #2ecc71;
+}
+
+button.orange {
+   background-color: orangered;
+}
 .product-card:hover .card-btn{
     opacity: 1;
 }
