creating a sign-up page

--- a/pages/sign-up.css
+++ b/pages/sign-up.css
@@ -1,3 +1,4 @@
+/*so here am describing how the page will look like*/
 body{
     margin: 0px;
     padding: 0px;
@@ -10,19 +11,19 @@ body{
 .container{
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
+    margin: 10px auto;
     max-width:200px;
-    height: 300px;
-    margin-top: 90px;
+    height: 500px;
+    margin-top: 100px;
     background-color: #FBFBFB;
     display: flex;
 }
 .section1{
-    width: 40%;
-    padding-left: 50px;
+    width: 70%;
+    padding-left: 80px;
 }
 .section2{
-    width: 50%;  
+    width: 80%;  
 }
 .section2 > img{
     width: 100%;
@@ -30,7 +31,7 @@ body{
     margin: 10px 0px 0px 8px;
 }
 h5{
-    margin-top: -12px;
+    margin-top: 16px;
 }
 label{
     text-transform: uppercase;
@@ -70,7 +71,7 @@ p{
     font-size: small;
 }
 .line{
-    border-bottom: 1px solid lightgray;
+    border-bottom: 2px solid lightgray;
     width: 100%;
     margin-top: 50px;
 }
